# ai-transition

./: .gitignore  README.md  beautify_md.py  beautify_merged.py  cleanup_questions.py  convert_learning_to_qa.py  convert_to_qa.py  extract_agent_qa.py  final_cleanup.py  generate_merged_source.py  merge_questions.py  reorganize_questions.py  requirements.txt  scrape_xiaolinnote.py  update_website_sources.py  wechat_scraper_xiaolincoding.py
credit_risk_control_system/: 01_金融信贷风控 AI 应用系统 — 系统架构设计.md  README.md  pyproject.toml  requirements.txt
credit_risk_control_system/Learning_Review_Plan/: AI应用工程师7天复习计划.md  招聘市场岗位分析_数据仓库与AI应用开发.md  数据仓库工程师7天复习计划.md
credit_risk_control_system/Learning_Review_Plan/AI/: Day01_PIT样本构建与时间泄漏.md  Day02_特征工程三种模式.md  Day03_规则与模型融合决策.md  Day04_模型评估监控与熔断.md  Day05_降级容错设计.md  Day06_LLM应用架构.md  Day07_可解释性与综合项目.md
credit_risk_control_system/Learning_Review_Plan/notes/: 01_黑白名单建立.md  02_Feature 详细解释，作用，实现，应用.md  02_abc 卡以及其他领域对应模型.md  02_ml 系统以及关键组成应用.md
credit_risk_control_system/Learning_Review_Plan/数仓/: Day01_分层架构与DDL设计.md  Day02_数据质量体系与扣分制清洗.md  (+5 more)
credit_risk_control_system/config/: settings.yaml
credit_risk_control_system/docker/: Dockerfile  docker-compose.yml  prometheus.yml
credit_risk_control_system/resume/: 简历_AI应用开发工程师.md  简历_数据仓库转AI应用开发工程师.md
credit_risk_control_system/scripts/: generate_data_pipeline.py  run_inference.py  run_monitoring.py  run_warehouse_etl.py  train_model.py
credit_risk_control_system/src/: __init__.py
credit_risk_control_system/study/: 02_AI 应用技术栈在信贷风控系统中的落地映射.md  AI应用开发工程师的工作体现.md  LangChain_LangGraph_LangSmith详解.md  模拟数据的完整项目流转过程.md  表字段对照表.md  跨业务通用数据仓库开发能力.md  跨业务通用的AI应用开发能力.md
credit_risk_control_system/tests/: __init__.py  test_feature_store.py  test_models.py  test_rule_engine.py
(+1166 files in other folders)
