[project]
name = "credit-risk-control"
version = "1.0.0"
description = "Production-grade Credit Risk Control AI System"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    # --- 核心ML（生产真实使用）---
    "xgboost>=2.0",            # A卡模型，P99 < 10ms推理
    "lightgbm>=4.0",           # 挑战者模型
    "scikit-learn>=1.3",       # 评分卡、特征工程
    "shap>=0.42",              # 模型可解释性（TreeExplainer）
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",             # WOE/IV 统计计算

    # --- 推理服务（生产真实使用）---
    "fastapi>=0.104",          # 推理网关（异步高性能）
    "uvicorn[standard]>=0.24", # ASGI server
    "pydantic>=2.5",           # 请求/响应数据校验
    "grpcio>=1.59",            # 内部服务通信
    "grpcio-tools>=1.59",

    # --- 数据与消息（生产真实使用）---
    "redis>=5.0",              # 在线特征存储（生产: Redis Cluster）
    "kafka-python>=2.0",       # Kafka 生产者/消费者
    "aiokafka>=0.10",          # 异步 Kafka 客户端

    # --- ML平台（生产真实使用）---
    "mlflow>=2.8",             # 模型版本管理 + 实验追踪

    # --- 监控（生产真实使用）---
    "prometheus-client>=0.19", # Prometheus 指标暴露
    "prometheus-fastapi-instrumentator>=6.1",

    # --- 工具 ---
    "pyyaml>=6.0",             # 规则配置、特征定义
    "httpx>=0.25",             # 第三方API调用（征信/多头）
    "python-multipart>=0.0.6",
    "tenacity>=8.2",           # 重试策略
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "fakeredis>=2.20",         # ★ DEV: 开发环境替代真实Redis
    "httpx-mock>=0.11",        # ★ DEV: 模拟第三方HTTP服务
    "black>=23.0",
    "ruff>=0.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
